# vedium

./: .gitignore  ARQUITETURA.md  CONTRIBUTING.md  Dockerfile  ESTADO_ATUAL.md  GIT_WORKFLOW.md  HOSTS_SETUP.md  README.md  docker-compose.yml  init.sh  install_apps.sh  task.md  task1_pagamentos.md  task2_cursos.md  task3_uiux.md  task4_seguranca.md  task5_observabilidade.md  task6_documentacao.md
.devcontainer/: devcontainer.json
vedium_core/: README.md  input.css  install_tailwind.sh  package.json  pyproject.toml  tailwind.config.js
vedium_core/docs/: api.md  design_audit.md
vedium_core/vedium_core/: api.py  crypto_setup.py  custom_setup.py  gamification.py  hooks.py  install.py  sample_data.py  set_perms.py  utils.py
vedium_core/vedium_core/controllers/: ai_controller.py
vedium_core/vedium_core/public/: manifest.json  offline.html
vedium_core/vedium_core/public/css/: luxo_theme.css  vedium.css
vedium_core/vedium_core/public/js/: pwa-register.js  sw.js
vedium_core/vedium_core/services/: ai_service.py  crypto_service.py
vedium_core/vedium_core/startup/: boot.py
vedium_core/vedium_core/templates/: base.html
vedium_core/vedium_core/tests/: test_api.py
vedium_core/vedium_core/vedium_core/doctype/flashcard/: flashcard.json  flashcard.py
vedium_core/vedium_core/vedium_core/doctype/lesson_slot/: lesson_slot.json
vedium_core/vedium_core/vedium_core/doctype/placement_test/: placement_test.json
vedium_core/vedium_core/vedium_core/doctype/placement_test_question/: placement_test_question.json
vedium_core/vedium_core/www/: home.html  sobre.html  sw.js
(+29 files in other folders)
