[project]
name = "vedium_core"
authors = [
    { name = "Vedium Team", email = "info@vediums.com"}
]
description = "Vedium Core App"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "mercadopago",
    "openai",
    "prometheus-client"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
